--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
     <script src="script.js" defer></script>
@@ -26,9 +26,7 @@
 
     <main class="main-content">
         <div class="card">
-            <a href="/" class="logo-link">
-                <img src="logo.svg" alt="SMTP Test Logo" class="logo-img">
-            </a>
+            <h1 class="main-title">SMTP Test</h1>
 
             <div id="disclaimer-box" class="disclaimer-box">
                 <strong data-translate-key="disclaimerTitle">Atenção:</strong>
@@ -116,16 +114,7 @@
     </main>
     
     <footer class="app-footer">
-        <p class="mb-1">V1.0 | SMTP Test © <span id="currentYear">2025</span></p>
-        <p class="mb-3">
-            <svg class="heart-icon" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd"></path></svg>
-            <a href="http://link.mercadopago.com.br/rouglas" target="_blank" rel="noopener noreferrer">Apoie este projeto</a>
-        </p>
-        <div class="rouglas-logo-container">
-            <a href="https://rouglas.com" target="_blank" rel="noopener noreferrer" aria-label="Rouglas.com">
-                <img src="https://rouglas.com/rouglaslogo.svg" alt="Rouglas Logo" class="rouglas-logo-img">
-            </a>
-        </div>
+        <p>V1.0 | SMTP Test © <span id="currentYear">2025</span></p>
     </footer>
 
 </body>
