--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>SMTP Test - Ferramenta de Teste de Conexão Rápida</title>
+    <title>SMTP Test - Ferramenta de Teste de Conexão</title>
     <meta name="description" content="Verifique suas configurações de servidor SMTP de forma rápida e fácil. Teste conexões, envie e-mails de teste e garanta que seu serviço está funcionando corretamente.">
     
     <link rel="icon" type="image/svg+xml" href="icon/favicon.svg">
-
-    <link rel="alternate" hreflang="pt" href="https://smtp.rouglas.com/" />
-    <link rel="alternate" hreflang="en" href="https://smtp.rouglas.com/" />
-    <link rel="alternate" hreflang="es" href="https://smtp.rouglas.com/" />
-    <link rel="alternate" hreflang="it" href="https://smtp.rouglas.com/" />
-    <link rel="alternate" hreflang="x-default" href="https://smtp.rouglas.com/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,6 +23,7 @@
             <h1 class="main-title">SMTP Test</h1>
 
             <div id="disclaimer-box" class="disclaimer-box">
+                <button id="close-disclaimer-btn" class="close-btn" aria-label="Fechar aviso">&times;</button>
                 <strong data-translate-key="disclaimerTitle">Atenção:</strong>
                 <span data-translate-key="disclaimerText">Esta é uma ferramenta de demonstração de interface (Frontend). Nenhum e-mail real será enviado.</span>
             </div>
