--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
     <main class="main-content">
         <div class="card">
-            <h1 class="main-title">SMTP Test</h1>
-
+            <header class="card-header">
+                <a href="/" class="logo-link">
+                    <img src="logo.svg" alt="SMTP Test Logo" class="logo-img">
+                </a>
+            </header>
+            
             <div id="disclaimer-box" class="disclaimer-box">
                 <button id="close-disclaimer-btn" class="close-btn" aria-label="Fechar aviso">&times;</button>
                 <strong data-translate-key="disclaimerTitle">Atenção:</strong>
