--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMTP Test - Ferramenta Funcional de Teste de Conexão</title>
+    <title>SMTP Test - Ferramenta de Teste de Conexão</title>
     <meta name="description" content="Verifique suas configurações de servidor SMTP de forma rápida e fácil. Teste conexões, envie e-mails de teste e garanta que seu serviço está funcionando corretamente.">
     <link rel="icon" type="image/svg+xml" href="icon/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -21,6 +20,12 @@
                     <img src="logo.svg" alt="SMTP Test Logo" class="logo-img">
                 </a>
             </header>
+            
+            <div id="disclaimer-box" class="disclaimer-box">
+                <button id="close-disclaimer-btn" class="close-btn" aria-label="Fechar aviso">&times;</button>
+                <strong data-translate-key="disclaimerTitle">Atenção:</strong>
+                <span data-translate-key="disclaimerText">Esta é uma ferramenta de demonstração de interface (Frontend). Nenhum e-mail real será enviado.</span>
+            </div>
 
             <div class="language-switcher">
                 <button class="lang-btn" data-lang="pt"><img src="icon/br.svg" alt="Português"> PT</button>
@@ -34,8 +39,12 @@
             </p>
 
             <div class="presets">
-                <button class="btn btn-preset" id="btn-google"><img src="icon/gmail.svg" alt="Gmail Icon"> Google/Gmail</button>
-                <button class="btn btn-preset" id="btn-microsoft"><img src="icon/outlook.svg" alt="Outlook Icon"> Microsoft/Outlook</button>
+                <button class="btn btn-preset" id="btn-google">
+                    <img src="icon/gmail.svg" alt="Gmail Icon"> Google/Gmail
+                </button>
+                <button class="btn btn-preset" id="btn-microsoft">
+                    <img src="icon/outlook.svg" alt="Outlook Icon"> Microsoft/Outlook
+                </button>
             </div>
 
             <form id="smtp-form" novalidate>
@@ -89,17 +98,9 @@
     </main>
     
     <footer class="app-footer">
-        <p class="mb-1">V1.0 | SMTP Test © <span id="currentYear">2025</span></p>
-        <p class="mb-3">
-            <svg class="heart-icon" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd"></path></svg>
-            <a href="http://link.mercadopago.com.br/rouglas" target="_blank" rel="noopener noreferrer" id="supportLinkText">Apoie este projeto</a>
-        </p>
-        <div class="rouglas-logo-container">
-            <a href="https://rouglas.com" target="_blank" rel="noopener noreferrer" aria-label="Rouglas.com">
-                <img src="https://rouglas.com/rouglaslogo.svg" alt="Rouglas Logo" class="rouglas-logo-img">
-            </a>
-        </div>
+        <p>V1.0 | SMTP Test © <span id="currentYear">2025</span></p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
