--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     
     <script src="https://www.google.com/recaptcha/api.js?render=6Ld8T6srAAAAAAwXZ0GOLUl-WAnPHITT0Wlawxqw"></script>
 
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sx9jr225kw");
+</script>
+
+
     <style>
         /* --- Reset Básico e Configurações Globais --- */
         * { margin: 0; padding: 0; box-sizing: border-box; }
